--- a/composer.json
+++ b/composer.json
@@ -18,18 +18,24 @@
         "composer/installers": "^2.0",
         "drupal/admin_toolbar": "*",
         "drupal/computed_field": "^4.0@beta",
+        "drupal/conditional_fields": "^4.0@alpha",
         "drupal/core-composer-scaffold": "^10.5",
         "drupal/core-project-message": "^10.5",
         "drupal/core-recommended": "^10.5",
         "drupal/devel": "^5.4",
+        "drupal/entity_autocomplete_suggestions": "^3.0",
         "drupal/entity_events": "^2.0",
+        "drupal/entity_usage": "^2.0@beta",
         "drupal/estimated_read_time": "^1.2",
+        "drupal/field_group": "^4.0",
         "drupal/hook_event_dispatcher": "^4.2",
         "drupal/mahi": "^1.1",
+        "drupal/paragraphs": "^1.19",
         "drupal/read_time": "^2.0@beta",
         "drupal/restui": "^1.22",
         "drupal/simple_oauth": "^6.0",
         "drupal/twig_tweak": "^3.4",
+        "drupal/view_unpublished": "^1.3",
         "drupal/views_load_more": "^2.0",
         "drush/drush": "^13.6"
     },
