--- a/docroot/themes/custom/drupalstacks/drupalstacks.info.yml
+++ b/docroot/themes/custom/drupalstacks/drupalstacks.info.yml
@@ -20,12 +20,14 @@ core_version_requirement: ^9 || ^10 || ^11
 libraries:
   - drupalstacks/bootstrap5
   - drupalstacks/icons
+  - drupalstacks/blog
 regions:
   header: Header
   primary_menu: Primary menu
   secondary_menu: Secondary menu
   hero: Hero (full width)
   highlighted: Highlighted
+  messages: Messages
   breadcrumb: Breadcrumb
   social: Social Bar
   content_above: Content Above
