--- a/docroot/themes/custom/drupalstacks/drupalstacks.libraries.yml
+++ b/docroot/themes/custom/drupalstacks/drupalstacks.libraries.yml
@@ -11,7 +11,8 @@ icons:
   css:
     theme:
       https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css: {}
-blog:
-  css:
-    theme:
-      css/blog.css: {}
+popup-menu:
+  js:
+    js/popup-menu.js: {}
+  dependencies:
+    - core/jquery
